# ChangeLog for Gentoo Linux Installer
# Copyright 2005 Gentoo Technologies, Inc.

dialogfe (05 Jan 2005):

  24 Mar 2005; Preston Cody <codeman@gentoo.org>
  Added hostname, domainname, and nisdomainname to networking list.
  Added a stage_tarball selection patch from zahna.

  23 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
  Fixed crash bug if you cancel from the partition type selection menu. Added
  timezone patch from zahna.

  21 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
  Removed get_random_salt() function and replaced calls to crypt.crypt()
  with calls to GLIUtility.hash_password()

  21 Mar 2005; Preston Cody <codeman@gentoo.org>
  Re-enabled emerge sync since new python patch fixes threading bug.

  19 Mar 2005; Preston Cody <codeman@gentoo.org>
  Temporarily disabled 'emerge sync' option due to python threading bug.
  Updated TODO list to show our progress towards Alpha!
  
  19 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
  Updated partition code to work with newer version of GLIStorageDevice.
  Updated set_network_mounts to work with separate netmounts structure in
  InstallProfile and fixed some bugs.

  16 Mar 2005; Preston Cody <codeman@gentoo.org>
  Fixing more bugs.  added dns server support.

  14 Mar 2005; Preston Cody <codeman@gentoo.org>
  second try on set gateway code.
  
  18 Feb 2005; Preston Cody <codeman@gentoo.org>
  added progress bar for install

  9 Feb 2005; Andrew Gaffney <agaffney@gentoo.org>
  a few tiny fixes to set_networking()
  
  7 Feb 2005; Scott Myron <samyron@gentoo.org>
  Added set_networking(), not tested.

  5 Feb 2005; Preston Cody <codeman@gentoo.org>
  added custom kernel and bootsplash options.  hope it works.
  
  26 Jan 2005; Preston Cody <codeman@gentoo.org>
  pretend now a runtime question.
  
  25 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
  Fixed set_additional_users()

  22 Jan 2005; Preston Cody <codeman@gentoo.org>
  Finished initital coding of additional_users. more text detail.
