@@ -3,6 +3,11 @@
 
 dialogfe (05 Jan 2005):
 
+  25 Mar 2005; Preston Cody <codeman@gentoo.org>
+  added another patch from zahna for portage tarball selection.
+  Added a choice for local_install which determines error checking on tarballs
+  and whether to use existing partitions by default.
+
   24 Mar 2005; Preston Cody <codeman@gentoo.org>
   Added hostname, domainname, and nisdomainname to networking list.
   Added a stage_tarball selection patch from zahna.
